# qlidarview

./: .gitignore  CMakeLists.txt  README.md  setup_build_deps_archlinux.sh  setup_build_deps_ubuntu20.sh
apps/dump_hdl_lidar_specifcation_xml/: CMakeLists.txt
apps/dump_hdl_lidar_specifcation_xml/src/: dump_hdl_lidar_specifcation_xml.cc
apps/pcapr/: CMakeLists.txt
apps/pcapr/src/: pcapr.cc
apps/pcaprlive/: CMakeLists.txt
apps/pcaprlive/src/: pcaprlive.cc
apps/qlidarview/: CMakeLists.txt
apps/qlidarview/src/: MainWindow.cc  MainWindow.h  QAppGlobalOptions.cc  QAppGlobalOptions.h  app-resources.qrc  main.cc
apps/udpcap/: CMakeLists.txt
apps/udpcap/src/: udpcap.cc
core/: CMakeLists.txt  README.md  debug.cc  debug.h  ssprintf.h
core/displayfunction/: c_image_display_function.cc  c_image_display_function.h  c_mtf_image_display_function.cc  c_mtf_image_display_function.h  c_point_cloud_display_function.cc  c_point_cloud_display_function.h
core/io/: c_pcap_file.cc  c_pcap_file.h  load_image.cc  load_image.h  save_image.cc
core/lidar/: c_hdl_lidar_specifcation.cc  c_hdl_lidar_specifcation.h  c_hdl_packet_parser.cc  c_hdl_packet_parser.h  c_hdl_pcap_file_loader.cc  c_hdl_pcap_file_loader.h  c_lidar_display.cc  c_lidar_display.h  c_lidar_frame.cc  c_lidar_frame.h  c_lidar_frame_loader.cc  c_lidar_frame_loader.h  hdl_lidar_specifcation_db_xml.cc  hdl_lidar_specifcation_db_xml.h
core/proc/: colormap.cc  colormap.h  histogram.cc  pixtype.cc  pixtype.h
data/xml/: Alpha Prime.xml
gui/: CMakeLists.txt  README.md  gui-resources.qrc
gui/qimagesave/: QImageSaveOptions.cc  QImageSaveOptions.h
gui/qimageview/: QImageViewer.cc  QImageViewer.h
gui/qlidar/: QLidarCloudView.cc  QLidarCloudView.h  QLidarCloudViewSettings.cc  QLidarCloudViewSettings.h  QLidarConfigFileSettings.cc  QLidarConfigFileSettings.h  QLidarDisplay.cc  QLidarDisplay.h  QLidarDisplaySettings.cc  QLidarDisplaySettings.h  QLidarDisplayView.cc  QLidarDisplayView.h  QLidarRangeImageView.cc  QLidarRangeImageView.h
gui/qmtfcontrols/: QHistogramView.cc  QMtfControl.cc  QMtfControl.h  qmtfcontrols-resources.qrc
gui/widgets/: QBrowsePathCombo.cc  QErrorMsgBox.cc  QErrorMsgBox.h  settings.h
